--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "type": "git",
     "url": "git+https://github.com/jayanthidhanabalan/react-native-custom-theme.git"
   },
-  "author": "Jayanthi Dhanabalan <jayanthi.dhanabalan@olamnet.com> (https://github.com/jayanthidhanabalan)",
+  "author": "Jayanthi Dhanabalan <jayanthidhanabalan@gmail.com> (https://github.com/jayanthidhanabalan)",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/jayanthidhanabalan/react-native-custom-theme/issues"
