--- a/example/package.json
+++ b/example/package.json
@@ -5,13 +5,13 @@
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios --port=8084",
-    "start": "react-native start",
+    "start": "react-native start --reset-cache --port=8084",
     "build:android": "react-native build-android --extra-params \"--no-daemon --console=plain -PreactNativeArchitectures=arm64-v8a\"",
     "build:ios": "react-native build-ios --mode Debug"
   },
   "dependencies": {
-    "react": "19.0.0",
-    "react-native": "0.79.2"
+    "react": "19.1.0",
+    "react-native": "^0.80.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -23,7 +23,7 @@
     "@react-native/babel-preset": "0.79.2",
     "@react-native/metro-config": "0.79.2",
     "@react-native/typescript-config": "0.79.2",
-    "@types/react": "^19.0.0",
+    "@types/react": "19.1.0",
     "react-native-builder-bob": "^0.40.8",
     "react-native-monorepo-config": "^0.1.9"
   },
